Se agrega Wigetta al catalogo

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
                 <h3>Los mas vendidos</h3>
                 <div class="container_libros_vendidos">
                     <div class="item2">
-                        <img src="Imagenes\libro1.jpg" alt="Alas de sangre">
-                        <p>La Asistencia</p>
+                        <img src="Imagenes\libro1.jpg" alt="La Asitenta">
+                        <p>La Asistenta</p>
                     </div>
-                    <div class="item2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis esse consequatur architecto sequi quis quisquam modi veniam tempore, dignissimos, dolores voluptatem adipisci facere non officia? Maxime atque consectetur officiis temporibus.</div>
+                    <div class="item2">
+                        <img src="Imagenes\wigetta.jpg" alt="Universo Wigetta 1" id="wigetta">
+                        <p>Universo Wigetta 1</p>
+                    </div>
                     <div class="item2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat et cupiditate, officia aliquam sint illo ipsam incidunt expedita exercitationem dolore itaque cumque dicta fugiat. Officia, ex. Assumenda unde eligendi quisquam.</div>
                 
                 </div>
