Agregado de imagenes y nueva propuesta de 5 colum as

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <img src="Imagenes\wigetta.jpg" alt="Universo Wigetta 1" id="wigetta">
                         <p>Universo Wigetta 1</p>
                     </div>
-                    <div class="item2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat et cupiditate, officia aliquam sint illo ipsam incidunt expedita exercitationem dolore itaque cumque dicta fugiat. Officia, ex. Assumenda unde eligendi quisquam.</div>
+                    <div class="item2"><img src="Imagenes\Cancion de aquiles.webp" alt="La cancion de aquiles"></div>
                 
                 </div>
             </section>
@@ -46,8 +46,8 @@
             <section class="atemporales">
                 <h3>Clasicos de todos los tiempos </h3>
                 <div class="container_libros_atemporales">
-                    <div class="item2"></div>
-                    <div class="item2"></div>
+                    <div class="item2"><img src="Imagenes\Principito.jpg" alt="El Principito"></div>
+                    <div class="item2"><img src="Imagenes\RomeoYJulieta.jpg" alt="Romeo y Julieta"></div>
                     <div class="item2"></div>
                 
                 </div>
@@ -57,7 +57,7 @@
             <section class="recomendados">
                 <h3>Recomendados</h3>
                 <div class="container_libros_recomendados">
-                    <div class="item2"></div>
+                    <div class="item2"><img src="Imagenes\La chica del tren.png" alt="La chica del tren"></div>
                     <div class="item2"></div>
                     <div class="item2"></div>
                 </div>
