--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
         <div class="row">
             <footer>
                 <!-- metodos de pagos con fotitos -->
-                <p class="texto_pie"> La Gata y la Luna | © 2013-2024</p>
-                <p class="texto_pie"> Buenos Aires, Argentina</p>
+                <p class="texto_pie"> La Gata y la Luna | © 2013-2024 | Buenos Aires, Argentina</p>
+                
+                <p class="texto_pie"> Todos los derechos reservados. </p>
             </footer>
         </div>
 </body>
