--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         
         <nav>
             <div class="item"><h2><a class="menu" href="index.html" >Home</a></h2></div>
-            <div class="item"><h2><a class="menu" href="Catalogo.html" >Sugerencias</h2></a></div>
+            <div class="item"><h2><a class="menu" href="Catalogo.html" >Catalogo</h2></a></div>
             <div class="item"><h2><a class="menu" href="nosotros.html" >Nosotros</h2></a></div>
-            <div class="item"><h2><a class="menu" href="FQ.html" >Visitanos</h2></a></div>
+            <div class="item"><h2><a class="menu" href="FQ.html" >FAQ</h2></a></div>
         </nav>
     </header>
         <main>
