--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h3>Los mas vendidos</h3>
                 <div class="container_libros_vendidos">
                     <div class="item2">
-                        <img src="Imagenes\libro1.jpg" alt="La Asitenta">
+                        <a href="Catalogo.html#la_asistenta"> <img src="Imagenes\libro1.jpg" alt="La Asistenta"> </a>
                         <p class="epigrafe">La Asistenta</p>
                     </div>
                     <div class="item2">
