--- a/FQ.html
+++ b/FQ.html
@@ -41,14 +41,102 @@
             </div>
         </section>
 
-        <div class="iframe">
+        <section class="direccion">
             <p class="pregunta"> ¿Como llegar? </p>
             <p class="respuesta">Para llegar de forma sencilla, puede guiarse mediante el siguiente mapa:</p>
         
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.102930536206!2d-58.46854118812414!3d-34.550949172860584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb69cd8e3e7ef%3A0x537b9975a6394b1e!2sLa%20Gata%20y%20La%20Luna%20-%20Libros!5e0!3m2!1ses-419!2sar!4v1715818139721!5m2!1ses-419!2sar" width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        
-        </div>
+        </section>
 
+        <section class="medios_pagos">
+            <p class="pregunta">
+                Medios de pago
+            </p>
+            <p class="respuesta_direccion">
+                <h1>
+                    ¿Cuáles son las formas de pago habilitadas?
+                </h1>
+            </p>
+            <ul class="lista_medios_pagos">
+                <li class="item_medios_pagos">
+                    <strong>Depósito o transferencia en nuestra cuenta bancaria:</strong> luego de realizar tu pedido, recibirás un correo electrónico con los datos necesarios para efectuar el pago.
+                </li>
+                <li class="item_medios_pagos">
+                    <strong>Tarjetas de créditos</strong>: Visa, Mastercard y American Express.
+                </li>
+                <li class="item_medios_pagos">
+                    <strong>MercadoPago.</strong>
+                </li>
+                <li class="item_medios_pagos">
+                    <strong>Mobbex</strong>
+                </li>
+                <li class="item_medios_pagos">
+                    <strong>RapiPago o Pago Fácil:</strong> recibirás un cupón de pago a tu casilla de correo electrónico para presentar en cualquiera de las sucursales.
+                </li>
+            </ul>
+        </section>
+
+        <section class="seguridad">
+            <p class="pregunta">
+                ¿Es seguro usar tarjeta de crédito?
+            </p>
+            <p class="respuesta_seguridad">
+                Para resguardar la seguridad de los datos en internet se han desarrollado un número de protocolos y aplicaciones usando técnicas de encriptación.
+            </p>
+            <p class="respuesta_seguridad">
+                En nuestro local, la seguridad está garantizada por el uso de los protocolos Secure HTTP y Secure Sockets Layer (SSL) que proveen de autenticación para servidores y navegadores. Como así también mantienen la confidencialidad e integridad de los datos por las comunicaciones entre su navegador y nuestro servidor.
+            </p>
+            <p class="respuesta_seguridad">
+                Cuando un dato es enviado desde su navegador a nuestro servidor, el mismo es encriptado, y de esta forma se mantiene a personas no autorizadas lejos de poder interceptar o ver estos datos.
+            </p>
+            <p class="respuesta_seguridad">
+                Los datos se encriptan usando algoritmo sha256RSA.
+            </p>
+            <p class="respuesta_seguridad">
+                Hemos seleccionado el sistema de Pago Seguro de Mobbex para compras internacionales y MercadoPago y Mobbex para compras nacionales para la validación de las tarjetas de crédito en línea. Opera con VISA (Verified by VISA homologado), Mastercard, American Express, Cabal, Tarjeta Shopping y Tarjeta Naranja, cumpliendo con los estándares internacionales y locales definidos por las tarjetas mencionadas.
+            </p>
+        </section>
+
+        <section class="devoluciones">
+
+            <p class="pregunta">
+                Devoluciones
+            </p>
+
+            <p class="respuesta_devoluciones">
+                A partir de la recepción de tu orden, tenés <strong>10 días corridos</strong> para poder realizar cambios o devoluciones. Podés solicitarla a través del 
+                <a class="link_formulario" href="#formulario"> <strong>formulario de contacto</strong></a>.
+            </p>
+
+            <p class="respuesta_devoluciones">
+                Para solicitar los cambios o devoluciones, es indispensable que informes:
+            </p>
+
+            <ul class="lista_devolucion">
+                <li class="item_devolucion">
+                    Número de pedido (que recibiste por correo electrónico)
+                </li>
+                <li class="item_devolucion">
+                    Motivo/s del cambio o la devolución.
+                </li>
+                <li class="item_devolucion">
+                    Si fuera sobre productos puntuales de la orden, indicar el ISBN y título de los productos y la cantidad a devolver o cambiar.
+                </li>
+            </ul>
+
+            <p class="respuesta_devoluciones">
+                Recibirás un correo electrónico con toda la información para concretar el cambio o la devolución.
+            </p>
+
+            <p class="respuesta_devoluciones">
+                <strong>Importante:</strong> se aceptarán los cambios y devoluciones si los productos no fueron usados ni tienen signos de deterioro (roturas, escritos o manchados) y estuvieran en el mismo estado en que se recibieron conservando los envoltorios o cajas originales, plásticos, con sus etiquetas incluyendo todo tipo de accesorios si los hubiere.
+            </p>
+
+            <p class="respuesta_devoluciones">
+                <strong>Más información sobre tus derechos:</strong> de acuerdo con lo establecido por la Ley de Defensa al Consumidor, el consumidor tiene derecho a revocar la operación comercial (por adquisición de cosas y/o prestación de servicios) durante el plazo de diez (10) días corridos, contados a partir de la fecha en que se entregue la cosa o se celebre el contrato, lo último que ocurra, sin responsabilidad alguna. Esta facultad no puede ser dispensada ni renunciada. El consumidor comunicará fehacientemente dicha revocación al proveedor y pondrá la cosa a su disposición. Los gastos de devolución son por cuenta del proveedor. Para ejercer el derecho de revocación el consumidor deberá poner la cosa a disposición del vendedor sin haberla usado y manteniéndola en el mismo estado en que la recibió, debiendo restituir el proveedor al consumidor los importes recibidos. Para más información, si residís en CABA, podés llamar al 147 (teléfono gratuito).
+            </p>
+
+        </section>
 
     </main>
 
