--- a/Catalogo.html
+++ b/Catalogo.html
@@ -72,7 +72,7 @@
         <img src="Imagenes\Cancion de aquiles.webp" alt="La Cancion de Aquiles">
         <div class="seccion"> 
             <a name="la_asistenta"> <h2>La canción de Aquiles</h2></a>
-            <p >Título Original: La canción de Aquiles</p>
+            <p >Título Original: The Song of Achilles</p>
             <p >Autores: Madeline Miller</p>
             <p >Género: Ficción histórica, Mitología, Romance</p>
             <p >Publicación: 2011</p>
@@ -114,7 +114,7 @@
     <img src="Imagenes\Principito.jpg" alt="El principito">
     <div class="seccion"> 
         <a id="la_asistenta"> <h2>El Principito</h2></a>
-        <p >Título Original: El Principito</p>
+        <p >Título Original: Le Petit Prince</p>
         <p >Autores: Antoine de Saint-Exupéry</p>
         <p >Género: Fábula, Literatura Infantil, Filosofía</p>
         <p >Publicación: 1943</p>
@@ -137,7 +137,7 @@
     <img src="Imagenes\RomeoYJulieta.jpg" alt="Romeo y Julieta">
     <div class="seccion"> 
         <a id="la_asistenta"> <h2>Romeo y Julieta</h2></a>
-        <p >Título Original: Romeo y Julieta</p>
+        <p >Título Original:Romeo and Juliet</p>
         <p >Autores:William Shakespeare</p>
         <p >Género:  Tragedia, Drama, Romance</p>
         <p >Publicación: 1597</p>
@@ -162,7 +162,7 @@
     <img src="Imagenes\crepusculo.webp" alt="Crepusculo">
     <div class="seccion"> 
         <a id="la_asistenta"> <h2>Crepusculo</h2></a>
-        <p >Título Original: Crepusculo</p>
+        <p >Título Original: Twilight</p>
         <p >Autores:Stephenie Meyer</p>
         <p >Género: Fantasía, Romance, Juvenil</p>
         <p >Publicación: 2005</p>
@@ -207,7 +207,7 @@ En la segunda parte, "La vuelta de Martín Fierro", el protagonista, después de
     <img src="Imagenes/la chica del tren.webp"alt="La Chica del Tren">
     <div class="seccion"> 
         <a id="la_asistenta"> <h2> La Chica del Tren</h2></a>
-        <p >Título Original: La Chica del Tren</p>
+        <p >Título Original: The Girl on the Train</p>
         <p >Autores:  Paula Hawkins</p>
         <p >Género: Suspenso psicológico, Thriller</p>
         <p >Publicación: 2015</p>
@@ -229,7 +229,7 @@ A medida que se desarrolla la trama, se revelan secretos oscuros y giros inesper
     <img src="Imagenes/la tempestad.webp"alt="La Tempestad">
     <div class="seccion"> 
         <a id="la_asistenta"> <h2> La tempestad</h2></a>
-        <p >Título Original:La tempestad</p>
+        <p >Título Original:The tempest</p>
         <p >Autores: William Shakespeares</p>
         <p >Género:  Drama, Comedia</p>
         <p >Publicación: 1611</p>
