--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
         
         
         <nav>
-            <div class="item"><h2><a class="menu" href="index.html" >Home</a></h2></div>
-            <div class="item"><h2><a class="menu" href="Catalogo.html" >Catalogo</h2></a></div>
-            <div class="item"><h2><a class="menu" href="nosotros.html" >Nosotros</h2></a></div>
-            <div class="item"><h2><a class="menu" href="FQ.html" >FAQ</h2></a></div>
+            <div class="item"><h2><a id="indexLink" class="menu" href="index.html" >Home</a></h2></div>
+            <div class="item"><h2><a id="catalogoLink" class="menu" href="Catalogo.html" >Catalogo</h2></a></div>
+            <div class="item"><h2><a id="nosotrosLink" class="menu" href="nosotros.html" >Nosotros</h2></a></div>
+            <div class="item"><h2><a id="FQLink" class="menu" href="FQ.html" >FAQ</h2></a></div>
         </nav>
+
+        <script src="menu.js"></script>
+
     </header>
         <main>
             <section class="mas_vendidos"> 
