--- a/Catalogo.html
+++ b/Catalogo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_catalago.css">
-    <title>La Gata y La Luna</title>
+    <title>Catalogo - La Gata y La Luna</title>
 </head>
 <body>
     <header>
