--- a/nosotros.html
+++ b/nosotros.html
@@ -14,7 +14,6 @@
                 <img src="Imagenes\logo_blanco.png" id="logo_blanco"> 
                 <h1 class="titulo">La gata y la Luna</h1>
             </div>
-            <a href="https://www.instagram.com/lagataylaluna?igsh=bTdjOW1lcG14ODVr"> <img src="Imagenes\instagram.png" id="instagram"> </a>
             
         </div>
         
@@ -60,6 +59,27 @@
                 <img src="Imagenes\taller4.jpg" alt="taller4">
             </div>
         </section>
+
+        <section class="social">
+            <p class="pregunta">Redes Sociales</p>
+            <div class="red1">
+                <a href="https://www.instagram.com/lagataylaluna?igsh=bTdjOW1lcG14ODVr"><img src="Imagenes\instagram-logo.png" id="instagram"></a>
+                <p class="nombre_red">@lagataylaluna</p>
+            </div>
+
+            <div class="red2">
+                <a href="https://www.facebook.com/lagataylaluna"><img src="Imagenes\facebook-logo.png" id="facebook"></a>
+                <p class="nombre_red">La gata y la luna </p>
+            </div>
+
+            <div class="red3">
+                <img src="Imagenes\mail.png" id="mail">
+                <p class="nombre_red">lagataylalunalibros@gmail.com </p>
+            </div>
+
+        </section>
+
+
     </main>
 
 </body>
