--- a/Catalogo.html
+++ b/Catalogo.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="Imagenes\logo_oficial.png">
     <link rel="stylesheet" href="style_catalago.css">
     <title>Catalogo - La Gata y La Luna</title>
 </head>
