--- a/nosotros.html
+++ b/nosotros.html
@@ -55,10 +55,10 @@
                 Talleres y Eventos
             </p>
             <div class="imagenes">
-                <img src="Imagenes\taller1.jpg" alt="taller1">
-                <img src="Imagenes\taller2.jpg" alt="taller2"> 
-                <img src="Imagenes\taller3.jpg" alt="taller3">
-                <img src="Imagenes\taller4.jpg" alt="taller4">
+                <img class="fig" src="Imagenes\taller1.jpg" alt="taller1">
+                <img class="fig" src="Imagenes\taller2.jpg" alt="taller2"> 
+                <img class="fig" src="Imagenes\taller3.jpg" alt="taller3">
+                <img class="fig" src="Imagenes\taller4.jpg" alt="taller4">
             </div>
         </section>
 
