--- a/FQ.html
+++ b/FQ.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centro de ayuda- La Gata y la Luna</title>
-    <link rel="icon" type="image/x-icon" href="Imagenes\logo_oficial.png">
+    <link rel="icon" type="image/x-icon" href="Imagenes\logo_oficial.png" alt="icono">
     <link rel="stylesheet" href="style_fq.css">
 </head>
 <body>
@@ -14,15 +14,15 @@
         <div class="header-container">
 
             <div class="banner">
-                <img src="Imagenes\logo_blanco.png" id="logo_blanco"> 
+                <img src="Imagenes\logo_blanco.png" id="logo_blanco" alt="logo"> 
                 <h1 class="titulo">La gata y la Luna</h1>
             </div> 
         
             <nav>
                 <div class="item"><h2><a id="indexLink" class="menu" href="index.html" >Home</a></h2></div>
-                <div class="item"><h2><a id="catalogoLink" class="menu" href="Catalogo.html" >Catalogo</h2></a></div>
-                <div class="item"><h2><a id="nosotrosLink" class="menu" href="nosotros.html" >Nosotros</h2></a></div>
-                <div class="item"><h2><a id="FQLink" class="menu" href="FQ.html" >FAQ</h2></a></div>
+                <div class="item"><h2><a id="catalogoLink" class="menu" href="Catalogo.html" >Catalogo</a></h2></div>
+                <div class="item"><h2><a id="nosotrosLink" class="menu" href="nosotros.html" >Nosotros</a></h2></div>
+                <div class="item"><h2><a id="FQLink" class="menu" href="FQ.html" >FAQ</a></h2></div>
             </nav>
 
             <script src="menu.js"></script> 
