--- a/Catalogo.html
+++ b/Catalogo.html
@@ -75,7 +75,7 @@
             </div>
     </section>
     <section>
-        <img src="Imagenes/Cancion de aquiles.webp" alt="La Cancion de Aquiles">
+        <img src="Imagenes/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles">
         <div class="seccion"> 
             <a name="la_asistenta"> <h2>La canción de Aquiles</h2></a>
             <p >Título Original: The Song of Achilles</p>
@@ -187,7 +187,7 @@ Uno de los momentos críticos de la trama es la llegada de un grupo de vampiros 
     </div>
 </section>
 <section>
-    <img src="Imagenes/martin fierro.webp"alt="Martin Fierro">
+    <img src="Imagenes/martin_fierro.webp"alt="Martin Fierro">
     <div class="seccion"> 
         <a id="la_asistenta"> <h2>Martin Fierro</h2></a>
         <p >Título Original: Martin Fierro</p>
@@ -210,7 +210,7 @@ En la segunda parte, "La vuelta de Martín Fierro", el protagonista, después de
 </section>
 
 <section>
-    <img src="Imagenes/la chica del tren.webp"alt="La Chica del Tren">
+    <img src="Imagenes/la_chica_del_tren.webp"alt="La Chica del Tren">
     <div class="seccion"> 
         <a id="la_asistenta"> <h2> La Chica del Tren</h2></a>
         <p >Título Original: The Girl on the Train</p>
@@ -232,7 +232,7 @@ A medida que se desarrolla la trama, se revelan secretos oscuros y giros inesper
     </div>
 </section>
 <section>
-    <img src="Imagenes/la tempestad.webp"alt="La Tempestad">
+    <img src="Imagenes/la_tempestad.webp"alt="La Tempestad">
     <div class="seccion"> 
         <a id="la_asistenta"> <h2> La tempestad</h2></a>
         <p >Título Original:The tempest</p>
@@ -272,7 +272,7 @@ A lo largo de la obra, Shakespeare explora temas de poder, traición, perdón y 
     </div>
 </section>
 <section>
-    <img src="Imagenes/Programacion para libros.jpg"alt="Aprende a Programar con Scratch: Manual para Niños">
+    <img src="Imagenes/Programacion_para_libros.jpg"alt="Aprende a Programar con Scratch: Manual para Niños">
     <div class="seccion"> 
         <a id="la_asistenta"> <h2>Aprende a Programar con Scratch: Manual para Niños</h2></a>
         <p >Título Original:Aprende a Programar con Scratch: Manual para Niños</p>
