--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="Catalogo.html#wigetta"><img class="libro" src="Imagenes/wigetta.jpg" alt="Universo Wigetta 1"></a>
                         <p class="epigrafe">Universo Wigetta</p>
                     </div>
-                    <div class="item2"><img class="libro" src="Imagenes/Cancion de aquiles.webp" alt="La Cancion de Aquiles">
+                    <div class="item2"><img class="libro" src="Imagenes/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles">
                         <p class="epigrafe">Cancion de Aquiles</p>
                     </div>
                     
@@ -68,7 +68,7 @@
                     <div class="item2"><img class="libro" src="Imagenes/crepusculo.webp" alt="Crepusculo">
                         <p class="epigrafe">Crepusculo</p>
                     </div>
-                    <div class="item2"><img class="libro" src="Imagenes/martin fierro.webp" alt="Martin Fierro">
+                    <div class="item2"><img class="libro" src="Imagenes/martin_fierro.webp" alt="Martin Fierro">
                         <p class="epigrafe">Martin Fierro</p>
                     </div>
                 </div>
@@ -78,16 +78,16 @@
             <section class="recomendados">
                 <h3>Recomendados</h3>
                 <div class="container_libros_recomendados">
-                    <div class="item2"><img class="libro" src="Imagenes/La chica del tren.webp" alt="La chica del tren">
+                    <div class="item2"><img class="libro" src="Imagenes/La_chica_del_tren.webp" alt="La chica del tren">
                         <p class="epigrafe">La Chica del Tren</p>
                     </div>
-                    <div class="item2"> <img class="libro" src="Imagenes/la tempestad.webp" alt="La tempestad">
+                    <div class="item2"> <img class="libro" src="Imagenes/la_tempestad.webp" alt="La tempestad">
                         <p class="epigrafe">La tempestad</p>
                     </div>
                     <div class="item2"><img class="libro" src="Imagenes/bozondehiggs.jpg" alt="El bozon de higgs no te va a hacer la cama">
                         <p class="epigrafe">El Bozon de Higgs <br> no te va a hacer la cama</p>
                     </div>
-                    <div class="item2"><img class="libro" src="Imagenes/Programacion para libros.jpg" alt="Programacion para niños">
+                    <div class="item2"><img class="libro" src="Imagenes/Programacion_para_libros.jpg" alt="Programacion para niños">
                         <p class="epigrafe">Programacion para Niños</p>
                     </div>
                 </div>
