FQ validator arreglado

--- a/nosotros.html
+++ b/nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros - La Gata y la Luna</title>
-    <link rel="icon" type="image/x-icon" href="Imagenes/logo_oficial.png" alt="icono">
+    <link rel="icon" type="image/x-icon" href="Imagenes/logo_oficial.png">
     <link rel="stylesheet" href="style_nosotros.css">
     
 </head>
@@ -65,17 +65,17 @@
         <section class="social">
             <p class="pregunta">Redes Sociales</p>
             <div class="red1">
-                <a href="https://www.instagram.com/lagataylaluna?igsh=bTdjOW1lcG14ODVr"><img src="Imagenes/instagram-logo.png" id="instagram"></a>
+                <a href="https://www.instagram.com/lagataylaluna?igsh=bTdjOW1lcG14ODVr"><img src="Imagenes/instagram-logo.png" id="instagram" alt="instagram"></a>
                 <p class="nombre_red">@lagataylaluna</p>
             </div>
 
             <div class="red2">
-                <a href="https://www.facebook.com/lagataylaluna"><img src="Imagenes/facebook-logo.png" id="facebook"></a>
+                <a href="https://www.facebook.com/lagataylaluna"><img src="Imagenes/facebook-logo.png" id="facebook" alt="Facebook"></a>
                 <p class="nombre_red">La gata y la luna </p>
             </div>
 
             <div class="red3">
-                <a href="mailto:lagataylalunalibros@gmail.com?subject=Consulta%20sobre%20productos&body=Hola,%20quisiera%20más%20información%20sobre%20sus%20productos."><img src="Imagenes/mail.png" id="mail"></a>
+                <a href="mailto:lagataylalunalibros@gmail.com?subject=Consulta%20sobre%20productos&body=Hola,%20quisiera%20más%20información%20sobre%20sus%20productos."><img src="Imagenes/mail.png" id="mail" alt="mail"></a>
                 <p class="nombre_red">lagataylalunalibros@gmail.com </p>
             </div>
 
