catalogo validator corregido

--- a/Catalogo.html
+++ b/Catalogo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="Imagenes/logo_oficial.png" alt="icono">
+    <link rel="icon" type="image/x-icon" href="Imagenes/logo_oficial.png">
     <link rel="stylesheet" href="style_catalago.css">
     <title>Catalogo - La Gata y La Luna</title>
 </head>
@@ -37,7 +37,7 @@
                 <img src="Imagenes/libro1.jpg" alt="La asistenta">
                 <div class="seccion">
                     
-                    <h2>La Asistenta</h1>
+                    <h2>La Asistenta</h2>
                     <p >Título Original: "The Housemaid"</p>
                     <p >Autora: Freida McFadden</p>
                     <p >Género: Thriller psicológico, Suspense</p>
@@ -57,7 +57,7 @@
 
         </section>
         <section>
-            <a name="wigetta"><img src="Imagenes/wigetta.jpg" alt="Universo Wigetta en el Infierno"></a>
+            <img src="Imagenes/wigetta.jpg" alt="Universo Wigetta en el Infierno">
             <div class="seccion"> 
                 <h2>Universo Wigetta en el Infierno</h2>
                 <p >Título Original: Universo Wigetta en el Infierno</p>
@@ -98,7 +98,7 @@
 <section>
     <img src="Imagenes/Sigman.jpg" alt="Artificial">
     <div class="seccion"> 
-        <a id="la_asistenta"> <h2>Artificial</h2></a>
+        <h2>Artificial</h2>
         <p >Título Original: Artificial</p>
         <p >Autores: Mariano Sigman</p>
         <p >Género: Ciencia Ficción, Psicología, Filosofía</p>
@@ -119,7 +119,7 @@
 <section>
     <img src="Imagenes/Principito.jpg" alt="El principito">
     <div class="seccion"> 
-        <a id="la_asistenta"> <h2>El Principito</h2></a>
+       <h2>El Principito</h2>
         <p >Título Original: Le Petit Prince</p>
         <p >Autores: Antoine de Saint-Exupéry</p>
         <p >Género: Fábula, Literatura Infantil, Filosofía</p>
@@ -142,7 +142,7 @@
 <section>
     <img src="Imagenes/RomeoYJulieta.jpg" alt="Romeo y Julieta">
     <div class="seccion"> 
-        <a id="la_asistenta"> <h2>Romeo y Julieta</h2></a>
+        <h2>Romeo y Julieta</h2>
         <p >Título Original:Romeo and Juliet</p>
         <p >Autores:William Shakespeare</p>
         <p >Género:  Tragedia, Drama, Romance</p>
@@ -167,7 +167,7 @@
 <section>
     <img src="Imagenes/crepusculo.webp" alt="Crepusculo">
     <div class="seccion"> 
-        <a id="la_asistenta"> <h2>Crepusculo</h2></a>
+        <h2>Crepusculo</h2>
         <p >Título Original: Twilight</p>
         <p >Autores:Stephenie Meyer</p>
         <p >Género: Fantasía, Romance, Juvenil</p>
@@ -187,9 +187,9 @@ Uno de los momentos críticos de la trama es la llegada de un grupo de vampiros 
     </div>
 </section>
 <section>
-    <img src="Imagenes/martin_fierro.webp"alt="Martin Fierro">
+    <img src="Imagenes/martin_fierro.webp" alt="Martin Fierro">
     <div class="seccion"> 
-        <a id="la_asistenta"> <h2>Martin Fierro</h2></a>
+        <h2>Martin Fierro</h2>
         <p >Título Original: Martin Fierro</p>
         <p >Autores: José Hernández</p>
         <p >Género: Poesía épica, Literatura argentina</p>
@@ -210,9 +210,9 @@ En la segunda parte, "La vuelta de Martín Fierro", el protagonista, después de
 </section>
 
 <section>
-    <img src="Imagenes/la_chica_del_tren.webp"alt="La Chica del Tren">
+    <img src="Imagenes/la_chica_del_tren.webp" alt="La Chica del Tren">
     <div class="seccion"> 
-        <a id="la_asistenta"> <h2> La Chica del Tren</h2></a>
+        <h2> La Chica del Tren</h2>
         <p >Título Original: The Girl on the Train</p>
         <p >Autores:  Paula Hawkins</p>
         <p >Género: Suspenso psicológico, Thriller</p>
@@ -232,9 +232,9 @@ A medida que se desarrolla la trama, se revelan secretos oscuros y giros inesper
     </div>
 </section>
 <section>
-    <img src="Imagenes/la_tempestad.webp"alt="La Tempestad">
+    <img src="Imagenes/la_tempestad.webp" alt="La Tempestad">
     <div class="seccion"> 
-        <a id="la_asistenta"> <h2> La tempestad</h2></a>
+        <h2> La tempestad</h2>
         <p >Título Original:The tempest</p>
         <p >Autores: William Shakespeares</p>
         <p >Género:  Drama, Comedia</p>
@@ -254,9 +254,9 @@ A lo largo de la obra, Shakespeare explora temas de poder, traición, perdón y 
     </div>
 </section>
 <section>
-    <img src="Imagenes/bozondehiggs.jpg"alt="El Bozon de Higgs No te va a Hacer la Cama">
+    <img src="Imagenes/bozondehiggs.jpg" alt="El Bozon de Higgs No te va a Hacer la Cama">
     <div class="seccion"> 
-        <a id="la_asistenta"> <h2> El Bozon de Higgs No te va a Hacer la Cama</h2></a>
+        <h2> El Bozon de Higgs No te va a Hacer la Cama</h2>
         <p >Título Original:El Bozon de Higgs No te va a Hacer la Cama</p>
         <p >Autores: Javier Santaolalla</p>
         <p >Género:  Divulgación científica</p>
@@ -272,9 +272,9 @@ A lo largo de la obra, Shakespeare explora temas de poder, traición, perdón y 
     </div>
 </section>
 <section>
-    <img src="Imagenes/Programacion_para_libros.jpg"alt="Aprende a Programar con Scratch: Manual para Niños">
+    <img src="Imagenes/Programacion_para_libros.jpg" alt="Aprende a Programar con Scratch: Manual para Niños">
     <div class="seccion"> 
-        <a id="la_asistenta"> <h2>Aprende a Programar con Scratch: Manual para Niños</h2></a>
+        <h2>Aprende a Programar con Scratch: Manual para Niños</h2>
         <p >Título Original:Aprende a Programar con Scratch: Manual para Niños</p>
         <p >Autores: María García</p>
         <p >Género:  Educación, Informática, Libro Infantil</p>
