--- a/Catalogo.html
+++ b/Catalogo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,7 +77,7 @@
     <section>
         <img src="Imagenes/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles">
         <div class="seccion"> 
-            <a name="la_asistenta"> <h2>La canción de Aquiles</h2></a>
+            <h2>La canción de Aquiles</h2>
             <p >Título Original: The Song of Achilles</p>
             <p >Autores: Madeline Miller</p>
             <p >Género: Ficción histórica, Mitología, Romance</p>
