Correcion links Index

--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
                 <h3>Los mas vendidos</h3>
                 <div class="container_libros_vendidos">
                     <div class="item2">
-                        <a href="Catalogo.html#la_asistentaa"> <img class="libro" src="Imagenes/libro1.jpg" alt="La Asistenta"> </a>
+                        <img class="libro" src="Imagenes/libro1.jpg" alt="La Asistenta">
                         <p class="epigrafe">La Asistenta</p>
                     </div>
                     <div class="item2">
-                        <a href="Catalogo.html#wigetta"><img class="libro" src="Imagenes/wigetta.jpg" alt="Universo Wigetta 1"></a>
+                        <img class="libro" src="Imagenes/wigetta.jpg" alt="Universo Wigetta 1">
                         <p class="epigrafe">Universo Wigetta</p>
                     </div>
-                    <div class="item2"><img class="libro" src="Imagenes/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles">
+                    <div class="item2">
+                        <img class="libro" src="Imagenes/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles">
                         <p class="epigrafe">Cancion de Aquiles</p>
                     </div>
                     
