Prueba links libro

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <img class="libro" src="Imagenes/libro1.jpg" alt="La Asistenta">
                         <p class="epigrafe">La Asistenta</p>
                     </div>
-                    <div class="item2">
+                    <a href="Catalogo.html#Universo Wigetta"> <div class="item2"> </a>
                         <img class="libro" src="Imagenes/wigetta.jpg" alt="Universo Wigetta 1">
                         <p class="epigrafe">Universo Wigetta</p>
                     </div>
