--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
                         <img class="libro" src="Imagenes/libro1.jpg" alt="La Asistenta">
                         <p class="epigrafe">La Asistenta</p>
                     </div>
-                        <a href="Catalogo.html#Universo Wigetta"> <div class="item2"> 
-                            <img class="libro" src="Imagenes/wigetta.jpg" alt="Universo Wigetta 1"> 
-                            <p class="epigrafe">Universo Wigetta</p>
-                        </a>
+                    <div class="item2">
+                        <img class="libro" src="Imagenes/wigetta.jpg" alt="Universo Wigetta 1">
+                        <p class="epigrafe">Universo Wigetta</p>
                     </div>
                     <div class="item2">
                         <img class="libro" src="Imagenes/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles">
