--- a/Catalogo.html
+++ b/Catalogo.html
@@ -56,7 +56,7 @@
                 
 
         </section>
-        <section id="Universo Wigetta">
+        <section id="Universo_Wigetta">
             <img src="Imagenes/wigetta.jpg" alt="Universo Wigetta en el Infierno">
             <div class="seccion"> 
                 <h2>Universo Wigetta en el Infierno</h2>
