--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p class="epigrafe">Universo Wigetta</p>
                     </div>
                     <div class="item2">
-                        <img class="libro" src="Imagenes/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles">
+                        <a href="Catalogo.html#Universo_Wigetta"> <img class="libro" src="Imagenes/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles"> </a>
                         <p class="epigrafe">Cancion de Aquiles</p>
                     </div>
                     
