--- a/Catalogo.html
+++ b/Catalogo.html
@@ -300,5 +300,15 @@
             <p class="texto_pie"> Todos los derechos reservados. </p>
         </footer>
     </div>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            if (window.location.hash) {
+                var targetElement = document.querySelector(window.location.hash);
+                if (targetElement) {
+                    targetElement.scrollIntoView({ behavior: "smooth", block: "start" });
+                }
+            }
+        });
+    </script>
 </body>
 </html>
